--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="hero-img__block">
                         <p class="hero__years">1860-1904</p>
-                        <img class="hero__img" src="img/Chekhov.jpg" alt="Чехов" width="723" height="458">
+                        <img class="hero__img" src="img/web.jpg" alt="Чехов" width="723" height="458">
                     </div>
                 </div>
             </div>
