added main page

--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
                 <div class="hero-content">
                     <div class="hero-title__block">
                         <h1 class="section-title hero__title">
-                            АНТОН <span class="last-name">ЧЕХ<span class="white-letters">ОВ</span></span>
+                            WEB <span class="last-name">3<span class="white-letters">.0</span></span>
                         </h1>
-                        <img class="signature" src="img/signature.png" alt="Подпись Чехова">
-                        <p class="hero__descr">Биография выдающегося русского писателя IXX–XX вв.</p>
+                        <p class="hero__descr">Реферат по учебной дисциплине «Интернет-технологии»</p>
                         <!-- <p class="hero__years">1860-1904</p> -->
                     </div>
                     <div class="hero-img__block">
-                        <p class="hero__years">1860-1904</p>
+                        <p class="hero__years">СТАНКИН</p>
                         <img class="hero__img" src="img/web.jpg" alt="Чехов" width="723" height="458">
                     </div>
                 </div>
