fixed main page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a class="header-menu__link" href="#childhood">Введение</a>
                     </li>
                     <li class="header-menu__item">
-                        <a class="header-menu__link" href="#creation">Ключевые направления развития ИТ в концепции «Web 3.0»</a>
+                        <a class="header-menu__link" href="#creation">Ключевые направления развития ИТ</a>
                     </li>
                     <li class="header-menu__item">
                         <a class="header-menu__link" href="#favorites-works">Искусственный интеллект и машинное обучение (AI/ML)</a>
@@ -47,7 +47,7 @@
                 <div class="hero-content">
                     <div class="hero-title__block">
                         <h1 class="section-title hero__title">
-                            WEB <span class="last-name">3<span class="white-letters">.0</span></span>
+                            КОНЦЕПЦИЯ <span class="last-name">WEB<span class="white-letters">3.0</span></span>
                         </h1>
                         <p class="hero__descr">Реферат по учебной дисциплине «Интернет-технологии»</p>
                         <!-- <p class="hero__years">1860-1904</p> -->
