--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a class="header-menu__link" href="#creation">Ключевые направления развития ИТ</a>
                     </li>
                     <li class="header-menu__item">
-                        <a class="header-menu__link" href="#favorites-works">Искусственный интеллект и машинное обучение (AI/ML)</a>
+                        <a class="header-menu__link" href="#favorites-works">AI/ML</a>
                     </li>
                     <li class="header-menu__item">
                         <a class="header-menu__link" href="#personal-life">Культура и искусство</a>
@@ -47,14 +47,14 @@
                 <div class="hero-content">
                     <div class="hero-title__block">
                         <h1 class="section-title hero__title">
-                            КОНЦЕПЦИЯ <span class="last-name">WEB<span class="white-letters">3.0</span></span>
+                            КОНЦЕПТ<span class="last-name">WEB <span class="white-letters">3.0</span></span>
                         </h1>
                         <p class="hero__descr">Реферат по учебной дисциплине «Интернет-технологии»</p>
-                        <!-- <p class="hero__years">1860-1904</p> -->
+                        <!-- <p class="hero__years">СТАНКИН</p> -->
                     </div>
                     <div class="hero-img__block">
                         <p class="hero__years">СТАНКИН</p>
-                        <img class="hero__img" src="img/web.jpg" alt="Чехов" width="723" height="458">
+                        <img class="hero__img" src="img/web.jpg" alt="WEB" width="723" height="458">
                     </div>
                 </div>
             </div>
@@ -63,6 +63,12 @@
         <section class="childhood" id="childhood">
             <div class="container">
                 <div class="childhood-content">
+                    <aside class="creation-content-note"></aside>
+                        <div class="note">
+                            <p class="number">1</p>
+                            <p class="text">Основные определения и направления Web 3.0</p>
+                        </div>                      
+                    </aside>
                     <div class="childhood-content-father">
                         <div class="childhood-block-text">
                             <h2 class="childhood-title">ВВЕДЕНИЕ</h2>
@@ -103,90 +109,10 @@
 							<p class="childhood-text">Таким образом, развитие ИТ сегодня происходит на стыке различных технологий и сфер жизни, что формирует новые модели ведения бизнеса и взаимодействия в обществе. Цифровая экономика, Индустрия 4.0 и Web 3.0 — это ключевые концепции, которые определяют современные и будущие тренды в мире технологий.</p>
                         </div>
                         <div class="chidhood-block-img">
-                            <img class="father-img" src="img/father.jpg" alt="Отец Чехова">
-                            <p class="father-img__note">Отец А.П Чехова Павел Егорович</p>
+                            <img class="father-img" src="img/web2.jpg" alt="WEB">
                         </div>
                     </div>
 
-                </div>
-
-                <div class="childhood-content-picture">
-                    <aside class="childhood-content-note">
-                    </aside>
-
-                    <div class="childhood-content-family">
-                        <div class="childhood-block-family">
-                            <img class="family-img" src="img/family.jpg" alt="Семья Чехова">
-                            <p class="family-descr">Семья Чеховых. Таганрог, 1874г.
-                                Сидят слева направо: брат Михаил, сестра Мария, отец павел Егорович, мать Евгения Яковлевна, жена дяди Митрофана Егоровича Людмила Павловна, их сын Георгий.
-                                Стоят: брат писателя Иван, сам Антон Павлович, старшие братья Николай и Александр, дядя Митрофан.</p>
-                        </div>
-                    </div>                   
-                </div>
-
-                <div class="taganrog__block">
-                    <div class="taganrog__content">
-
-                        <aside class="taganrog__content-note">
-                            <div class="note">
-                                <p class="number">3</p>
-                                <p class="text">Первые литературные опыты его состоялись ещё в детстве, во время обучения в гимназии.
-                                </p>
-                            </div>
-                        </aside>
-
-                        <div class="taganrog__content-text">
-                            <h3 class="taganrog-title">таганрог: гимназия, театр</h3>
-                            <div class="taganrog-text__year">
-                                <h4 class="taganrog-year">1868</h4>
-                                <p class="taganrog-text">Учиться будущий писатель начинает в таганрогской гимназии. Там он взял литературный псевдоним Чехонте, по прозвищу, которое дал ему один из учителей. В 13 лет Чехов впервые побывал в театре, где шла оперетта французского композитора Жака Оффенбаха «Прекрасная Елена». Именно тогда Чехов полюбил сцену и литературу. <sup>3</sup></p>
-                            </div>
-                            <div class="taganrog-gymnasium">
-                                <img class="gumnasium" src="img/gymnasium.jpg" alt="Гимназия, в которой учился Чехов">
-                                <p class="gumnasium-note">Таганрогская гимназия, где Чехов провёл 11 лет</p>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="dates__content">
-
-                        <aside class="dates__content-note">
-                            <div class="note">
-                                <p class="number">4</p>
-                                <p class="text">Будучи врачом, он принимал пациентов у себя на квартире. А к тем из них, что не могли передвигаться самостоятельно, он ездил сам.
-                                </p>
-                            </div>
-                        </aside>
-
-                        <div class="dates__content-text">
-                            <div class="years-text">
-                                <div class="dates-text__year year-1876">
-                                    <h4 class="dates-year">1876</h4>
-                                    <p class="dates-text">Чехов-старший разорился, и вся семья уехала в Москву. Шестнадцатилетний Антон, завершавший обучение в гимназии, остался один и занимался репетиторством, чтобы заработать себе на жизнь.</p>
-                                    <p class="dates-text">В эти годы он много читал, писал очерки для гимназических журналов, а журнал «Заика» с короткими зарисовками из таганрогской жизни отправлял братьям в Москву.</p>
-                                    <p class="dates-text">Тогда же Чехов написал первую пьесу — «Безотцовщина» и водевиль «Недаром курица пела».</p>
-                                </div>
-                                <div class="dates-text__year year-1879">
-                                    <h4 class="dates-year">1879</h4>
-                                    <p class="dates-text">Чехов окончил гимназию и уехал из Таганрога в Москву. Там он начал заботиться о семье, обеспечивал близких на скромный доход от литературных публикаций.</p>
-                                    <p class="dates-text">Дебют Чехова в печати состоялся в декабре того же года: в журнале «Стрекоза» были опубликованы рассказ «Письмо к учёному соседу» и юмореска «Что чаще всего встречается в романах, повестях и т. п».</p>
-                                    <p class="dates-text">В этом же году Чехов поступил на медицинский факультет Московского университета имени И.М. Сеченова. Студент-медик жил у брата Ивана в подмосковном Воскресенске (сегодня город Истра в подмосковье).                                       
-                                    </p>
-                                </div>
-                            </div>
-
-                            <div class="picture-text">
-                                <div class="picture-young">
-                                    <img class="picture-young__img" src="img/young-Checkov.jpg" alt="">
-                                </div>
-                                <div class="picture-text__year year-1881">
-                                    <h4 class="picture-year">1881</h4>
-                                    <p class="picture-text">Чехов знакомится с заведующим Воскресенской земской больницей, доктором Павлом Архангельским. Ещё во время учёбы Чехов принимал больных, здесь же прошёл практику, а после окончания университета остался работать уездным врачом. <sup>4</sup></p>
-                                </div>
-                            </div>                       
-                        </div>
-                    </div>                    
                 </div>
             </div>
         </section>
@@ -197,8 +123,8 @@
                     
                     <aside class="creation-content-note">
                         <div class="note">
-                            <p class="number">5</p>
-                            <p class="text">Многие пациенты не платили Чехову-врачу за лечение, так как денег у них не было. Об этом он упоминал в одном из своих писем.</p>
+                            <p class="number">2</p>
+                            <p class="text">Что такое Web 3.0 и самые перспективные направления развития этой концепции</p>
                         </div>                      
                     </aside>
 
@@ -213,7 +139,7 @@
 								<p class="creation-text">Развитие децентрализованных приложений (dApps) — ещё одно важное направление в рамках Web 3.0. Эти приложения функционируют в децентрализованных сетях, таких как Ethereum, что позволяет пользователям получать доступ к цифровым сервисам без необходимости взаимодействия с централизованными платформами, такими как Google или Facebook. dApps обеспечивают новые модели взаимодействия, где пользователи владеют своими данными и могут участвовать в управлении и развитии самих платформ. Интернет вещей (IoT) также играет важную роль в развитии Web 3.0, предоставляя возможность взаимодействия между миллиардами подключённых устройств. IoT в Web 3.0 создаёт среду, где устройства могут автономно обмениваться данными и принимать решения, что улучшает как личные, так и промышленные процессы.</p>
 								<p class="creation-text">Семантический веб и технологии обработки данных также находятся в центре внимания Web 3.0. Семантический веб позволяет интернету «понимать» данные на более глубоком уровне, что делает поиск и взаимодействие с информацией более эффективным. Это достижимо благодаря продвинутым алгоритмам и системам, способным распознавать контекст данных и автоматически связывать их между собой, что позволяет улучшить пользовательский опыт и облегчить доступ к нужной информации. Виртуальная и дополненная реальность (VR/AR) формируют новые способы взаимодействия с цифровым контентом, создавая иммерсивные среды, в которых пользователи могут активно взаимодействовать с информацией, услугами и друг с другом.</p>
 								<p class="creation-text">Однако одной из самых перспективных и активно развивающихся технологий Web 3.0 является искусственный интеллект и машинное обучение (AI/ML). Эти технологии занимают центральное место в концепции интеллектуализации веба, позволяя создавать адаптивные системы, которые могут автоматически обучаться, анализировать огромные объёмы данных и принимать решения на основе полученных знаний. Это позволяет создавать более «умные» цифровые сервисы, которые адаптируются под конкретные требования каждого пользователя [5].</p>
-                                <img class="creation-img" src="img/creation-Checkov.jpg" alt="Чехов">
+                                <img class="creation-img" src="img/web4.jpg" alt="WEB">
                             </div>
                         </div>
                                      
