--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 <div class="hero-content">
                     <div class="hero-title__block">
                         <h1 class="section-title hero__title">
-                            КОНЦЕПТ<span class="last-name">WEB <span class="white-letters">3.0</span></span>
+                            КОНЦЕПТ<span class="last-name">WEB<span class="white-letters"> 3.0</span></span>
                         </h1>
                         <p class="hero__descr">Реферат по учебной дисциплине «Интернет-технологии»</p>
                         <!-- <p class="hero__years">СТАНКИН</p> -->
                     </div>
                     <div class="hero-img__block">
                         <p class="hero__years">СТАНКИН</p>
-                        <img class="hero__img" src="img/web.jpg" alt="WEB" width="723" height="458">
+                        <img class="hero__img" src="img/main.jpg" alt="WEB" width="458" height="723">
                     </div>
                 </div>
             </div>
