--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 <div class="hero-content">
                     <div class="hero-title__block">
                         <h1 class="section-title hero__title">
-                            КОНЦЕПТ<span class="last-name">WEB<span class="white-letters"> 3.0</span></span>
+                            КОНЦЕПТ<span class="last-name">WEB 3.0</span>
                         </h1>
                         <p class="hero__descr">Реферат по учебной дисциплине «Интернет-технологии»</p>
                         <!-- <p class="hero__years">СТАНКИН</p> -->
                     </div>
                     <div class="hero-img__block">
                         <p class="hero__years">СТАНКИН</p>
-                        <img class="hero__img" src="img/main.jpg" alt="WEB" width="458" height="723">
+                        <img class="hero__img" src="img/web.jpg" alt="WEB" width="723" height="458">
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
 							<p class="childhood-text">Таким образом, развитие ИТ сегодня происходит на стыке различных технологий и сфер жизни, что формирует новые модели ведения бизнеса и взаимодействия в обществе. Цифровая экономика, Индустрия 4.0 и Web 3.0 — это ключевые концепции, которые определяют современные и будущие тренды в мире технологий.</p>
                         </div>
                         <div class="chidhood-block-img">
-                            <img class="father-img" src="img/web2.jpg" alt="WEB">
+                            <img class="father-img" src="img/main.jpg" alt="WEB">
                         </div>
                     </div>
 
