added ML and AI

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							<p class="childhood-text">Таким образом, развитие ИТ сегодня происходит на стыке различных технологий и сфер жизни, что формирует новые модели ведения бизнеса и взаимодействия в обществе. Цифровая экономика, Индустрия 4.0 и Web 3.0 — это ключевые концепции, которые определяют современные и будущие тренды в мире технологий.</p>
                         </div>
                         <div class="chidhood-block-img">
-                            <img class="father-img" src="img/main.jpg" alt="WEB">
+                            <img class="father-img" src="img/main.jpg" alt="main">
                         </div>
                     </div>
 
@@ -139,144 +139,11 @@
 								<p class="creation-text">Развитие децентрализованных приложений (dApps) — ещё одно важное направление в рамках Web 3.0. Эти приложения функционируют в децентрализованных сетях, таких как Ethereum, что позволяет пользователям получать доступ к цифровым сервисам без необходимости взаимодействия с централизованными платформами, такими как Google или Facebook. dApps обеспечивают новые модели взаимодействия, где пользователи владеют своими данными и могут участвовать в управлении и развитии самих платформ. Интернет вещей (IoT) также играет важную роль в развитии Web 3.0, предоставляя возможность взаимодействия между миллиардами подключённых устройств. IoT в Web 3.0 создаёт среду, где устройства могут автономно обмениваться данными и принимать решения, что улучшает как личные, так и промышленные процессы.</p>
 								<p class="creation-text">Семантический веб и технологии обработки данных также находятся в центре внимания Web 3.0. Семантический веб позволяет интернету «понимать» данные на более глубоком уровне, что делает поиск и взаимодействие с информацией более эффективным. Это достижимо благодаря продвинутым алгоритмам и системам, способным распознавать контекст данных и автоматически связывать их между собой, что позволяет улучшить пользовательский опыт и облегчить доступ к нужной информации. Виртуальная и дополненная реальность (VR/AR) формируют новые способы взаимодействия с цифровым контентом, создавая иммерсивные среды, в которых пользователи могут активно взаимодействовать с информацией, услугами и друг с другом.</p>
 								<p class="creation-text">Однако одной из самых перспективных и активно развивающихся технологий Web 3.0 является искусственный интеллект и машинное обучение (AI/ML). Эти технологии занимают центральное место в концепции интеллектуализации веба, позволяя создавать адаптивные системы, которые могут автоматически обучаться, анализировать огромные объёмы данных и принимать решения на основе полученных знаний. Это позволяет создавать более «умные» цифровые сервисы, которые адаптируются под конкретные требования каждого пользователя [5].</p>
-                                <img class="creation-img" src="img/web4.jpg" alt="WEB">
+                                <img class="creation-img" src="img/web4.jpg" alt="it">
                             </div>
                         </div>
                                      
                     </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="favorites-works" id="favorites-works">
-            <div class="container">
-
-                <div class="favorites-works__content fav-content">
-
-                    <aside class="fav-content-note">
-                        <div class="note">
-                            <p class="text">Известный литературный принцип «Чеховское ружьё» был создан именно Антоном Павловичем. Он прост: если на сцене есть ружьё, оно должно рано или поздно выстрелить. Проще говоря, в сюжете не должно быть неоконченных или оборванных сюжетных линий.</p>
-                        </div>                      
-                    </aside>
-
-                    <div class="fav-content__block">
-                        <h3 class="fav-content-title">избранные произведения</h3>
-                        <div class="fav-content__container">
-                            <div class="fav-content__img">
-                                <img class="fav-img" src="img/cherry-garden-book.jpg" alt="Вишневый сад">
-                            </div>
-                            <div class="fav-content__list fav-list">
-                                <ul class="fav-list__years years-list">
-                                    <hr>
-                                    <li class="years-list__item">
-                                        <span class="years-list__year">1883</span> 
-                                        <span class="works-list__item">«Толстый и тонкий»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="years-list__item">
-                                        <span class="years-list__year">1884</span> 
-                                        <span class="works-list__item">«Хамелеон»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="years-list__item">
-                                        <span class="years-list__year">1885</span> 
-                                        <span class="works-list__item">«Лошадиная фамилия»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="years-list__item">
-                                        <span class="years-list__year">1886</span> 
-                                        <span class="works-list__item">«Пестрые рассказы»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="years-list__item">
-                                        <span class="years-list__year">1892</span> 
-                                        <span class="works-list__item">«Палата № 6»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="years-list__item">
-                                        <span class="years-list__year">1898</span> 
-                                        <span class="works-list__item">«Человек в футляре»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="years-list__item">
-                                        <span class="years-list__year">1898</span> 
-                                        <span class="works-list__item">«О любви»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="years-list__item">
-                                        <span class="years-list__year">1903</span> 
-                                        <span class="works-list__item">«Вишнёвый сад»</span>
-                                    </li>
-                                    <hr>
-                                </ul>
-                            </div>                    
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="favorites-plays" id="favorites-plays">
-            <div class="container">
-                <div class="favorites-plays__content plays-content">
-
-                    <aside class="plays-content-note">
-                        <div class="note">
-                            <p class="text">Литературная известность пришла к Чехову после издания сборника «Пёстрые рассказы» в 1886 году.</p>
-                        </div>
-                        <div class="note">
-                            <p class="text">Исследователи биографии Чехова обратили внимание на то, что герои его ранних произведений в основном являются театральными актёрами. Это следствие его любви к театральному искусству.</p>
-                        </div>
-                    </aside>
-
-                    <div class="plays-content__block">
-                        <h3 class="plays-content-title">избранные пьесы</h3>
-                        <div class="plays-content__container">
-
-                            <div class="plays-content__list plays-list">
-                                <ul class="plays-list__years">
-                                    <hr>
-                                    <li class="plays-list__item">
-                                        <span class="plays-year">1885</span> 
-                                        <span class="plays-name">«Иванов»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="plays-list__item">
-                                        <span class="plays-year">1886</span> 
-                                        <span class="plays-name">«Медведь»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="plays-list__item">
-                                        <span class="plays-year">1892</span> 
-                                        <span class="plays-name">«Дядя Ваня»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="plays-list__item">
-                                        <span class="plays-year">1898</span> 
-                                        <span class="plays-name">«Чайка»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="plays-list__item">
-                                        <span class="plays-year">1898</span> 
-                                        <span class="plays-name">«Три сестры»</span>
-                                    </li>
-                                    <hr>
-                                    <li class="plays-list__item">
-                                        <span class="plays-year">1903</span> 
-                                        <span class="plays-name">«Вишнёвый сад»</span>
-                                    </li>
-                                    <hr>
-                                </ul>
-                            </div> 
-
-                            <div class="fav-content__img">
-                                <img class="fav-img" src="img/fav-plays.jpg" alt="Вишневый сад">
-                            </div>
-
-                        </div>
-
-                    </div>
-
                 </div>
             </div>
         </section>
@@ -289,15 +156,18 @@
 
                     <div class="personal-life__block">
                         <div class="personal-life__text">
-                            <h2 class="personal-life-title">ЛИЧНАЯ ЖИЗНЬ</h2>
-                            <p class="personal-text">Главной женщиной в жизни Чехова была Ольга Книппер. С ней писатель познакомился в 1889 г Ей достаточно быстро удалось покорить знаменитого и всеми любимого писателя, чего ранее не удавалось сделатьникому.</p>
-                            <p class="personal-text">Книппер была талантливой актрисой с привлекательной внешностью. У них с Чеховым никогдане было детей, хотя Ольга имела одну неудавшуюся беременность.</p>
-                            <p class="personal-text">Был ли этот брак счастливым — сказать достаточно сложно. После свадьбы Книппер продолжалаиграть в Московском Художественном театре, а Антон Чехов постоянно проживал в Крыму, борясь со своей болезнью.</p>
-                            <p class="personal-text">Спустя годы его друзья утверждали, что жизнь Чехова могла бы быть гораздо длиннееи лучше, если бы не брак с Ольгой.</p>
-                            <p class="personal-text">Хотя справедливости ради стоит заметить, что в последние годы биографии Чехова его женаотказалась от всех гастролей и оставалась рядом с болеющим мужем вплоть до его кончины.</p>
+                            <h2 class="personal-life-title">AI и ML</h2>
+                            <p class="personal-text">Искусственный интеллект (AI) и машинное обучение (ML) являются ключевыми технологиями, которые играют центральную роль в концепции Web 3.0, обеспечивая развитие более умных и автономных цифровых экосистем. В Web 3.0 эти технологии направлены на повышение эффективности и персонализации взаимодействий в сети, а также на управление огромными объёмами данных, которые генерируются пользователями и устройствами [6]. В отличие от предыдущих этапов развития интернета, Web 3.0 опирается на более интеллектуальные системы, которые могут самостоятельно учиться и принимать решения на основе анализа данных, обеспечивая более гибкие и адаптивные решения для пользователей.</p>
+                            <p class="personal-text">Одной из важнейших задач AI и ML в Web 3.0 является обеспечение персонализированного опыта для каждого пользователя. Традиционные системы Web 2.0 основывались на централизованной обработке данных, что ограничивало возможности глубокого анализа и персонализации. В Web 3.0, благодаря децентрализации и применению AI/ML, интернет-системы могут настраиваться под конкретные запросы и предпочтения пользователей, анализируя их поведение и взаимодействия с цифровыми сервисами. Это открывает путь к созданию контента и услуг, которые максимально соответствуют потребностям каждого человека, будь то рекомендации в электронной коммерции, персонализированные новостные ленты или адаптированные развлекательные платформы [7].</p>
+                            <p class="personal-text">AI и ML также играют ключевую роль в обработке больших данных, которые являются основой Web 3.0. В децентрализованных сетях и приложениях (dApps) данные поступают из множества источников — как от пользователей, так и от подключённых устройств, что создает сложную структуру информации. Машинное обучение позволяет анализировать эти данные в режиме реального времени, выявляя скрытые закономерности и тренды, которые можно использовать для принятия решений и оптимизации работы систем. Это особенно важно в контексте интернета вещей (IoT), где AI и ML помогают координировать работу множества устройств, делая возможным более эффективное управление производственными процессами, умными домами и другими подключёнными системами [8].</p>
+                            <p class="personal-text">Семантический анализ — ещё одно важное применение AI в Web 3.0. Благодаря возможностям машинного обучения, интернет-системы могут лучше понимать контекст данных и запросов пользователей, что позволяет улучшить качество поиска и взаимодействия с информацией. Например, современные системы распознавания естественного языка (NLP) уже активно используются для создания интеллектуальных помощников, таких как голосовые ассистенты и чат-боты. В Web 3.0 эти технологии получат ещё большее развитие, делая возможным более естественное взаимодействие человека с интернетом и улучшая точность и скорость отклика систем на запросы пользователей.</p>
+                            <p class="personal-text">Помимо персонализации и анализа данных, AI и ML играют важную роль в обеспечении безопасности в Web 3.0. Децентрализованный характер нового интернета создает новые вызовы в области кибербезопасности, и именно технологии искусственного интеллекта могут помочь справиться с этими задачами. Машинное обучение используется для автоматического обнаружения аномалий в поведении систем и сетевого трафика, что позволяет своевременно выявлять потенциальные угрозы и предотвращать атаки. AI также может автоматически обновлять и адаптировать системы безопасности, подстраиваясь под новые типы угроз и обеспечивая высокий уровень защиты данных в децентрализованных приложениях.</p>
+                            <p class="personal-text">AI и ML также находят применение в управлении децентрализованными автономными организациями (DAO). Эти организации, функционирующие на основе смарт-контрактов и блокчейна, требуют автоматизированных систем управления для оптимизации процессов голосования, принятия решений и распределения ресурсов. Искусственный интеллект может анализировать данные и поведение участников DAO, помогая принимать более информированные и справедливые решения, что делает такие организации более устойчивыми и эффективными.</p>
+                            <p class="personal-text">Важной перспективой развития AI и ML в Web 3.0 является интеграция этих технологий с блокчейном. Блокчейн обеспечивает безопасное и прозрачное хранение данных, а AI позволяет оптимизировать управление этими данными и автоматизировать процессы их обработки. Одним из примеров такой интеграции являются смарт-контракты, которые могут автоматически обновляться и изменяться в зависимости от анализа данных, полученных через AI-алгоритмы. Это создаёт условия для создания более гибких и адаптивных децентрализованных систем, способных самостоятельно реагировать на изменения в среде и требования пользователей.</p>
+                            <p class="personal-text">Таким образом, искусственный интеллект и машинное обучение являются фундаментальными технологиями в развитии Web 3.0. Они обеспечивают персонализацию контента, обработку больших данных, улучшение безопасности и автоматизацию управления децентрализованными системами. В перспективе AI и ML будут играть ещё более важную роль, создавая полностью автономные системы, которые смогут самостоятельно обучаться и адаптироваться к меняющимся условиям, обеспечивая интернет будущего, который будет более умным, безопасным и адаптированным под потребности каждого пользователя.</p>
                         </div>
                         <div class="personal-life__img">
-                            <img class="personal-img" src="img/personal-life.jpg" alt="Чехов и Ольга Книппер">
+                            <img class="personal-img" src="img/web3.jpg" alt="ML">
                         </div>
                     </div>
                 </div>
